--- a/LAB1.html
+++ b/LAB1.html
@@ -460,7 +460,7 @@ div.tocify {
 <p>In this lab we will have an opportunity to do some simple population modeling using three different software packages: MS Excel, R, and InsightMaker. I encourage you to work in groups- but just remember you must submit individually!</p>
 <div id="nomenclature-for-population-ecology" class="section level2">
 <h2>Nomenclature for Population Ecology</h2>
-<p>First of all, we need a symbol to represent the population size. This is <span class="math inline">\(N\)</span>!</p>
+<p>First of all, we need a symbol to represent population size. This is <span class="math inline">\(N\)</span>!</p>
 <p><span class="math inline">\(\Delta N\)</span> represents the change in population size, <span class="math inline">\({N_{t+1}}-{N_t}\)</span></p>
 <p>The famous “BIDE” equation is a way to break down <span class="math inline">\(\Delta N\)</span> into components.</p>
 <p><span class="math inline">\(\Delta N = B + I - D - E \qquad \text{(Eq. 1)}\)</span></p>
@@ -571,51 +571,62 @@ div.tocify {
 <p>Depending on whether you are already familiar with R, you may also find the remainder of this document useful as you work your way through the course (and there are many other good introductory R resources available online… let me know if there is one you particularly like and I will add it to the course website (Links page)). As you work your way through this tutorial on your own pace, please ask the instructor or your peers if you are uncertain about anything.</p>
 <p>For a more detailed tutorial, see my “R Bootcamp” website: <a href="https://kevintshoemaker.github.io/R-Bootcamp/">https://kevintshoemaker.github.io/R-Bootcamp/</a>!</p>
 </div>
-<div id="set-up-the-workspace" class="section level3">
-<h3>Set up the workspace</h3>
-<p>The first thing we usually do when we start an R session is we set up the workspace. That is, we load <strong>packages</strong> (extensions), assign key parameters and initialize variables. When you write code, always type in the “script” window in Rstudio. You can execute commands using command-enter or control-enter in Rstudio.</p>
-<p>In this case, setting up the workspace is easy. We just need to define our parameter of interest - <span class="math inline">\(r\)</span> -, and set up a <strong>vector</strong> to represent the years of interest.</p>
+<div id="set-up-the-workspaceenvironment" class="section level3">
+<h3>Set up the workspace/environment</h3>
+<p>The first thing we usually do when we start an R session is we:</p>
+<ol style="list-style-type: decimal">
+<li>Open an new or existing RStudio Project</li>
+<li>Open a new or existing <strong>script</strong></li>
+<li>In the script, define key variables and functions, and load any additional <strong>packages</strong> (extensions) into our environment (or workspace). When you write code, always type in the “script” window in Rstudio. You can execute commands using command-enter or control-enter in Rstudio.</li>
+</ol>
+<p>In this lab, setting up the workspace is easy. We don’t need to load any packages or define any new functions. We just need to define our parameter of interest - <span class="math inline">\(r\)</span> -, and set up a <strong>storage vector</strong> to store population abundance over time.</p>
 <p>We can store data in memory by assigning it to an “object” using the assignment operator <strong>&lt;-</strong>. For example, this would assign the object “x” the value of 5.</p>
-<pre class="r"><code>x &lt;- 5     #Assign the value of 5 to the object &quot;x&quot;
-x          #Print the value of the object &quot;x&quot;</code></pre>
+<pre class="r"><code>x &lt;- 5     # define the variable &#39;x&#39; as representing the value 5
+x          # Print the value stored in the object &quot;x&quot;</code></pre>
 <p>Note that any text after a pound sign (#) is not evaluated by R. These are <em>comments</em> and are intended to help you follow the code. You should always include comments in any code that you write- we humans tend to read and understand written language better than computer code!</p>
 <p>Let’s assign our per-capita population growth rate, <span class="math inline">\(r\)</span> (but this could be called anything), and our initial population size to an object called <strong>N0</strong> (that is, population size at time 0), and the number of years to simulate.</p>
 <pre class="r"><code>r &lt;- 0.1     #Assign the value of 0.1 to the object &quot;r&quot;, or per-capita growth rate (discrete)
-lambda &lt;- 1+r  # define lambda
+lambda &lt;- 1 + r           # (1 + r) is equal to lambda, the finite rate of growth.  This stores the result of the calculation (1 + 0.1 = 1.1) in the object &quot;lambda&quot;.
 N0 &lt;- 100    #Assign the value of 100 to the object &quot;N0&quot;, or initial population size
 nyears &lt;- 30 #Assign the value of 30 to the object &quot;nyears&quot;, or the number of time steps to simulate</code></pre>
 <p>If we want to know what the population size is at the next time step, we can simply multiply N0 by lambda.</p>
 <pre class="r"><code>N0 * lambda   #Multiplies the value stored in the object &quot;N0&quot; by lambda. As soon as you run this line of code, the result of the calculation is printed.</code></pre>
 <pre><code>## [1] 110</code></pre>
 <p>How can we find the population size for the next 30 years? Let’s first make an object that is a vector of years using the <strong>seq()</strong> or “sequence” function.</p>
-<pre class="r"><code>years &lt;- seq(from=0, to=nyears, by=1)   #Creates a sequence of numbers from 0 to the value stored in the object &quot;nyears&quot; (in this case, 50). Because you&#39;ve told this sequence to increment by 1, you&#39;ve created a string of numbers from 0 - 50 that contains 51 elements. A single series of elements (e.g., a single column of numbers) is called a vector. You then assign this vector to the object &quot;years&quot;.
+<pre class="r"><code>year &lt;- seq(from=0, to=nyears, by=1)   #Creates a sequence of numbers from 0 to the value stored in the object &quot;nyears&quot; (in this case, 50). Because you&#39;ve told this sequence to increment by 1, you&#39;ve created a string of numbers from 0 - 50 that contains 51 elements. A single series of elements (e.g., a single column of numbers) is called a vector. You then assign this vector to the object &quot;years&quot;.
 
-years                                   #Print the value of the object &quot;years&quot; that you just created.</code></pre>
+year                                   #Print the value of the object &quot;years&quot; that you just created.</code></pre>
 <pre><code>##  [1]  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
 ## [26] 25 26 27 28 29 30</code></pre>
 <p>Now, let’s build a storage structure to store simulated population size over this time period</p>
 <pre class="r"><code>N &lt;- numeric(nyears+1)    #Make an empty storage vector. The numeric() function takes the contents within the parentheses and converts those contents to the &quot;numeric&quot; class. Don&#39;t worry if this doesn&#39;t make sense -- what you need to know is that the value within the parentheses (in this case, 50+1=51) is used to tell this function how many zeros to create. So, this line of code creates a vector of 51 zeros, and assigns that vector to the object &quot;N&quot;.
 
+names(N) &lt;- year
+
 N                         #Prints the contents of the object &quot;N&quot;.</code></pre>
-<pre><code>##  [1] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0</code></pre>
+<pre><code>##  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 
+##  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0 
+## 26 27 28 29 30 
+##  0  0  0  0  0</code></pre>
 </div>
 <div id="run-the-simulation" class="section level3">
 <h3>Run the simulation!</h3>
 <p>Then we can use a <strong>for loop</strong> (a very powerful computer programming trick) to automatically generate the population size for each of those years (note the similarity in the equation inside the for loop to Expression 1.15 in Gotelli).</p>
 <pre class="r"><code>N[1] &lt;- N0                # The brackets [] are used to indicate the position of an element within a vector. This line of code assigns the value of the object &quot;N0&quot; (100) to the first element in the &quot;N&quot; object. Remember, the &quot;N&quot; object is a vector of 51 zeros. Now, the first zero is changed to 100.
 
-lambda &lt;- 1 + r           # (1 + r) is equal to lambda, the finite rate of growth.  This stores the result of the calculation (1 + 0.1 = 1.1) in the object &quot;lambda&quot;.
-
-for (i in 2:(nyears+1)){  # This for-loop will run through the line of code between the curly brackets {}. &quot;i&quot; is simply the name of a variable (you can use &quot;j&quot;, or &quot;k&quot;, instead -- any variable name will do). &quot;i&quot; changes each time the loop iterates; basically, it will increase by 1 each time the loop is run, starting at &quot;2&quot; up until the specified maximum number of loops &quot;50+1&quot;. 
-  N[i] &lt;- lambda*N[i-1]   # This takes the [i - 1] element of &quot;N&quot;, multiplies that element by the value of lambda, then assigns that calculated result to the [i] element of &quot;N&quot;.
+for (i in 2:(nyears+1)){  # This for-loop will run through the line of code between the curly brackets {}. &quot;i&quot; is simply the name of a variable (you can use &quot;j&quot;, or &quot;k&quot;, instead -- any variable name will do). &quot;i&quot; changes each time the loop iterates; basically, it will increase by 1 each time the loop is run, starting at &quot;2&quot; up until the specified maximum number of loops &quot;nyears+1&quot;. 
+  N[i] &lt;- N[i-1] * lambda  # This takes the [i - 1] element of &quot;N&quot;, multiplies that element by the value of lambda, then assigns that calculated result to the [i] element of &quot;N&quot;.
 }                         # This ends the for-loop.
 
 N                         # Now print the contents of the object &quot;N&quot;.</code></pre>
-<pre><code>##  [1]  100.0000  110.0000  121.0000  133.1000  146.4100  161.0510  177.1561
-##  [8]  194.8717  214.3589  235.7948  259.3742  285.3117  313.8428  345.2271
-## [15]  379.7498  417.7248  459.4973  505.4470  555.9917  611.5909  672.7500
-## [22]  740.0250  814.0275  895.4302  984.9733 1083.4706 1191.8177 1310.9994
-## [29] 1442.0994 1586.3093 1744.9402</code></pre>
+<pre><code>##         0         1         2         3         4         5         6         7 
+##  100.0000  110.0000  121.0000  133.1000  146.4100  161.0510  177.1561  194.8717 
+##         8         9        10        11        12        13        14        15 
+##  214.3589  235.7948  259.3742  285.3117  313.8428  345.2271  379.7498  417.7248 
+##        16        17        18        19        20        21        22        23 
+##  459.4973  505.4470  555.9917  611.5909  672.7500  740.0250  814.0275  895.4302 
+##        24        25        26        27        28        29        30 
+##  984.9733 1083.4706 1191.8177 1310.9994 1442.0994 1586.3093 1744.9402</code></pre>
 </div>
 <div id="plotting" class="section level3">
 <h3>Plotting</h3>
@@ -627,9 +638,9 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <h3>Exercise 2 (R-related problems)</h3>
 <p>Please provide short answers to the following questions. You will also be asked to <strong>provide your R code via tophat to back up your answers</strong>.</p>
 <ul>
-<li><p><strong><em>Short answer (2a.)</em></strong> Tweak the above code to run for 85 years. Plot your results (abundance vs time). What is the final population size at year 85?</p></li>
+<li><p><strong><em>Short answer (2a.)</em></strong> Modify the above code to run for 85 years. Plot your results (abundance vs time). What is the final population size at year 85?</p></li>
 <li><p><strong><em>Short answer (2b.)</em></strong> Change r to 0.35 and run again for 85 years (and plot the results). What is the final population size now? Include your plot as part of your answer (abundance vs time).</p></li>
-<li><p><strong><em>Short answer (2c.)</em></strong> Try to tweak the value of <span class="math inline">\(r\)</span> such that the final population size after 85 years is 1000. What is the value of <span class="math inline">\(r\)</span>? After you solve it by trial and error, try to solve this problem analytically using Eq. 10. Show your calculations.</p></li>
+<li><p><strong><em>Short answer (2c.)</em></strong> Try to modify the value of <span class="math inline">\(r\)</span> such that the final population size after 85 years is 1000 (initial population size stays at 100). What is the value of <span class="math inline">\(r\)</span>? After you solve it by trial and error, try to solve this problem analytically using Eq. 10. Show your calculations.</p></li>
 <li><p><strong><em>Short answer (2d.)</em></strong> Change the value of <span class="math inline">\(r\)</span> to -0.08. How long until the population goes extinct? NOTE: please define extinction as &lt;1 individual in the population- a fraction of an individual is not much of a population! Finally, propose one alternative definition of extinction and justify why this definition might make more sense than the definition stated above (feel free to use a real-world example).</p></li>
 </ul>
 </div>
@@ -660,9 +671,10 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <div id="exercise-3-insightmaker-problems" class="section level3">
 <h3>Exercise 3 (InsightMaker problems)</h3>
 <p>Please provide short answers to the following questions, and (when prompted) <strong>provide your “Insights” to back up your answers</strong>.</p>
-<p>First, tweak the above model so that per-capita (discrete) birth rate (<span class="math inline">\(b_d\)</span>) and death rate (<span class="math inline">\(d_d\)</span>) are separate elements of the model (using the “Variable” primitive). Your Insight should look something like this:</p>
+<p>First, modify the above model so that per-capita (discrete) birth rate (<span class="math inline">\(b_d\)</span>) and death rate (<span class="math inline">\(d_d\)</span>) are separate elements of the model (using the “Variable” primitive). Your Insight should look something like this:</p>
 <p><img src="IM3.png" /></p>
-<p>To enable easy manipulation of these variables, change the <strong>Show Value</strong> Slider option of <em>Birth Rate</em> (in the properties window for this Variable) to Yes. Change the <strong>Slider Max value</strong> to 1, the <strong>Slider Min value</strong> to 0, and the <strong>Slider Step value</strong> to 0.01. Do the same for <em>Death Rate</em> and <em>Population</em> (initial abundance <span class="math inline">\(N_0\)</span>). For abundance, set the maximum slider value to 1000 and set the slider step size to 1 so we don’t have fractional individuals! Now click on the white space of your model; you should now see the Birth Rate, Population and Death Rate sliders on the info tab. Change the slider values of the rates a few times, re-running the simulation each time. When you are confident that your model is working right, share it with your instructor and TA (save as a “public insight” and insert URL in the appropriate place in Top Hat).</p>
+<p>To enable easy manipulation of these variables, change the <strong>Show Value Slider</strong> options for <em>Birth Rate</em> and <em>Death Rate</em> (in the properties windows for these variables) to ‘Yes’. For both of these two variables, change the <strong>Slider Max value</strong> to 1, the <strong>Slider Min value</strong> to 0, and the <strong>Slider Step value</strong> to 0.01. For <em>Population</em>, set the <strong>Show Value Slider</strong> option to ‘Yes’; for this slider (which represents initial abundance <span class="math inline">\(N_0\)</span>), set the maximum slider value to 1000 and set the slider step size to 1 so we don’t have fractional individuals!</p>
+<p>Now click on the white space of your model; you should now see the Birth Rate, Population and Death Rate sliders on the info tab. Change the slider values of the rates a few times, re-running the simulation each time. When you are confident that your model is working right, share it with your instructor and TA (save as a “public insight” and insert URL in the appropriate place in Top Hat).</p>
 <p><strong>Clone</strong> your previous Insight before you move on to the next problem (otherwise any changes you make will carry over to your answer to the previous problem!). The “Clone Insight” link is located in the upper right corner. In general, always clone your Insights after you have copied a link to an insight into your lab write-up. That way, you won’t inadvertently change a model before your instructors have a chance to verify you did everything right!</p>
 <ul>
 <li><strong><em>Short answer (3a.)</em></strong> Starting with a growing population, can you come up with two different scenarios in which <em>Population</em> is neither growing nor declining, by only changing one of the sliders from the starting conditions (ie, starting with the version you just submitted)? Explain your answer.</li>
