--- a/LAB1.html
+++ b/LAB1.html
@@ -631,7 +631,7 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <div id="plotting" class="section level3">
 <h3>Plotting</h3>
 <p>Let’s plot our population size against time.</p>
-<pre class="r"><code>plot(N~years)   #This plot() function tells R to plot the y variable by the x variable. &quot;N&quot; is the y variable (dependent variable), and &quot;years&quot; is the x variable (independent variable). The tilda &quot;~&quot; stands for &quot;as a function of&quot;. There are many ways to customize the appearance of a plot in R - for now, just use the defaults.</code></pre>
+<pre class="r"><code>plot(N~year)   #This plot() function tells R to plot the y variable by the x variable. &quot;N&quot; is the y variable (dependent variable), and &quot;year&quot; is the x variable (independent variable). The tilda &quot;~&quot; stands for &quot;as a function of&quot;. There are many ways to customize the appearance of a plot in R - for now, just use the defaults.</code></pre>
 <p><img src="LAB1_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
 </div>
 <div id="exercise-2-r-related-problems" class="section level3">
@@ -679,7 +679,13 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 <ul>
 <li><strong><em>Short answer (3a.)</em></strong> Starting with a growing population, can you come up with two different scenarios in which <em>Population</em> is neither growing nor declining, by only changing one of the sliders from the starting conditions (ie, starting with the version you just submitted)? Explain your answer.</li>
 </ul>
-<p>##Checklist for Lab 1 completion *Please submit all files (Excel file as attachment in Top Hat and R script as text pasted into Top Hat) and responses via Top Hat. The InsightMaker models should be shared by saving your Insights as “public” and sharing the URL link with your instructors in Top Hat.</p>
+</div>
+</div>
+<div id="checklist-for-lab-1-completion" class="section level2">
+<h2>Checklist for Lab 1 completion</h2>
+<ul>
+<li>Please submit all files (Excel file as attachment in Top Hat and R script as text pasted into Top Hat) and responses via Top Hat. The InsightMaker models should be shared by saving your Insights as “public” and sharing the URL link with your instructors in Top Hat.</li>
+</ul>
 <p><strong><em>Due Feb. 4</em></strong></p>
 <ul>
 <li>Top Hat short answers and file submissions
@@ -716,7 +722,6 @@ N                         # Now print the contents of the object &quot;N&quot;.<
 </ul></li>
 </ul></li>
 </ul>
-</div>
 </div>
 
 
