--- a/LAB2.html
+++ b/LAB2.html
@@ -563,7 +563,7 @@ legend(&quot;topleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1),l
 <h3>QUESTIONS, Exercise 3:</h3>
 <p>3a. Is carrying capacity a <strong>stable equilibrium</strong>? Explain your reasoning. [NOTE: you already addressed this in the ‘population regulation’ lecture page on Top Hat!] [HINT: remember, when testing if an equilibrium is stable or not, first initialize the population at the equilibrium point and verify that the population neither grows or declines. Next, ‘perturb’ the system by changing the initial abundance and run the model again to see if it returns to the equilibrium state!].</p>
 <p>3b. Return the initial abundance to 10. Now start adjusting the value of <em>Max Growth Rate</em>. What do you notice as the maximum growth rate increases? Focus on the time series of population abundance over time. Can you identify different major changes in your ‘abundance over time’ plots as the growth rate increases from 1 to 5? You should be able to identify <em>at least</em> four unique patterns of population dynamics! Describe the patterns and the approximate thresholds at which change-overs occur from one pattern to the next. One of these patterns is known as <strong>Chaos</strong> (yes, that is the technical name)!! Can you figure out which pattern is known as chaos?? Provide <em>four plots</em> – one that illustrates each of the four unique patterns you identified.</p>
-<p><strong>NOTE</strong>: remember to copy the URL for your Insight, insert the URL in the appropriate place on Top Hat. And don’t make any more changes to this insight once you have submitted it (clone it if you want to keep making changes)!</p>
+<p>3c. Please share the URL for your Insight: save your model as a ‘Public Insight’ and insert the URL into Top Hat in the appropriate place. And don’t make any more changes to this insight once you have submitted it (use a ‘cloned’ version if you want to keep making changes)!</p>
 </div>
 </div>
 <div id="checklist-for-lab-2-completion" class="section level2">
@@ -595,6 +595,7 @@ legend(&quot;topleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1),l
 <ul>
 <li><em>Short answer (3a.)</em></li>
 <li><em>Short answer and four plots (3b.)</em></li>
+<li><em>InsightMaker link (3c.)</em></li>
 </ul></li>
 </ul></li>
 </ul>
